Update from https://github.com/thebesttv/eserver-static/commit/d10c6dc63e7ad734017c684907fcc6c070d43979

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-28 15:32 -->
+<!-- 2022-09-28 16:24 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,42 +33,42 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4577ff1">1. 妙妙文章</a>
+<li><a href="#orgc676009">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgd8ae7d2">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org422e58d">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org9130f95">1.3. 关于编辑器</a></li>
-<li><a href="#org02bc089">1.4. 关于代码</a></li>
-<li><a href="#orgb44a5b3">1.5. 关于CPU</a>
+<li><a href="#org13af015">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgab2222e">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgf24e118">1.3. 关于编辑器</a></li>
+<li><a href="#org57f55f1">1.4. 关于代码</a></li>
+<li><a href="#org195b41d">1.5. 关于CPU</a>
 <ul>
-<li><a href="#orgd0b9189">1.5.1. Lisp</a></li>
+<li><a href="#org8db561c">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgfe22726">1.6. 关于算法</a>
+<li><a href="#org0899a0c">1.6. 关于算法</a>
 <ul>
-<li><a href="#org13d3d4b">1.6.1. 关于随机</a></li>
+<li><a href="#org402a82a">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org7f4deea">1.7. 关于AI</a></li>
-<li><a href="#orgf66f5be">1.8. 关于软件</a>
+<li><a href="#org9202f5e">1.7. 关于AI</a></li>
+<li><a href="#org5dc48e4">1.8. 关于软件</a>
 <ul>
-<li><a href="#orgdd31f1e">1.8.1. SQLite</a></li>
+<li><a href="#orgd13d147">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org9b372ca">1.9. 关于workflow</a></li>
+<li><a href="#orgd406ead">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org3be3644">2. 棒棒视频</a>
+<li><a href="#orgbebaf5a">2. 棒棒视频</a>
 <ul>
-<li><a href="#orga48a1dc">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgba7f652">2.2. 各种剧</a></li>
-<li><a href="#orgadb1556">2.3. 电影</a></li>
+<li><a href="#org315613a">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org0f87390">2.2. 各种剧</a></li>
+<li><a href="#orgd5385da">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgb4ca555">3. 快乐游戏</a></li>
-<li><a href="#orgfa92a2b">4. 宝藏博主</a></li>
-<li><a href="#orgfd0a1e3">5. 有意思的</a></li>
-<li><a href="#org866b439">6. 我想玩的</a></li>
+<li><a href="#org0734a61">3. 快乐游戏</a></li>
+<li><a href="#org243f2ab">4. 宝藏博主</a></li>
+<li><a href="#org4d16995">5. 有意思的</a></li>
+<li><a href="#org7f56d1e">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -77,8 +77,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org4577ff1" class="outline-2">
-<h2 id="org4577ff1"><span class="section-number-2">1.</span> <a href="#org4577ff1">妙妙文章</a></h2>
+<div id="outline-container-orgc676009" class="outline-2">
+<h2 id="orgc676009"><span class="section-number-2">1.</span> <a href="#orgc676009">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -437,7 +437,7 @@ cards until the game is over.
 </p></li>
 </ul>
 
-<figure id="orgecfbb72">
+<figure id="org007d02b">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg">
 
 </figure>
@@ -501,8 +501,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgd8ae7d2" class="outline-3">
-<h3 id="orgd8ae7d2"><span class="section-number-3">1.1.</span> <a href="#orgd8ae7d2">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org13af015" class="outline-3">
+<h3 id="org13af015"><span class="section-number-3">1.1.</span> <a href="#org13af015">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -532,8 +532,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org422e58d" class="outline-3">
-<h3 id="org422e58d"><span class="section-number-3">1.2.</span> <a href="#org422e58d">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgab2222e" class="outline-3">
+<h3 id="orgab2222e"><span class="section-number-3">1.2.</span> <a href="#orgab2222e">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -567,8 +567,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org9130f95" class="outline-3">
-<h3 id="org9130f95"><span class="section-number-3">1.3.</span> <a href="#org9130f95">关于编辑器</a></h3>
+<div id="outline-container-orgf24e118" class="outline-3">
+<h3 id="orgf24e118"><span class="section-number-3">1.3.</span> <a href="#orgf24e118">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -584,8 +584,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org02bc089" class="outline-3">
-<h3 id="org02bc089"><span class="section-number-3">1.4.</span> <a href="#org02bc089">关于代码</a></h3>
+<div id="outline-container-org57f55f1" class="outline-3">
+<h3 id="org57f55f1"><span class="section-number-3">1.4.</span> <a href="#org57f55f1">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -611,8 +611,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-orgb44a5b3" class="outline-3">
-<h3 id="orgb44a5b3"><span class="section-number-3">1.5.</span> <a href="#orgb44a5b3">关于CPU</a></h3>
+<div id="outline-container-org195b41d" class="outline-3">
+<h3 id="org195b41d"><span class="section-number-3">1.5.</span> <a href="#org195b41d">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -626,8 +626,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-orgd0b9189" class="outline-4">
-<h4 id="orgd0b9189"><span class="section-number-4">1.5.1.</span> <a href="#orgd0b9189">Lisp</a></h4>
+<div id="outline-container-org8db561c" class="outline-4">
+<h4 id="org8db561c"><span class="section-number-4">1.5.1.</span> <a href="#org8db561c">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -650,8 +650,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgfe22726" class="outline-3">
-<h3 id="orgfe22726"><span class="section-number-3">1.6.</span> <a href="#orgfe22726">关于算法</a></h3>
+<div id="outline-container-org0899a0c" class="outline-3">
+<h3 id="org0899a0c"><span class="section-number-3">1.6.</span> <a href="#org0899a0c">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -670,8 +670,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org13d3d4b" class="outline-4">
-<h4 id="org13d3d4b"><span class="section-number-4">1.6.1.</span> <a href="#org13d3d4b">关于随机</a></h4>
+<div id="outline-container-org402a82a" class="outline-4">
+<h4 id="org402a82a"><span class="section-number-4">1.6.1.</span> <a href="#org402a82a">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -685,8 +685,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7f4deea" class="outline-3">
-<h3 id="org7f4deea"><span class="section-number-3">1.7.</span> <a href="#org7f4deea">关于AI</a></h3>
+<div id="outline-container-org9202f5e" class="outline-3">
+<h3 id="org9202f5e"><span class="section-number-3">1.7.</span> <a href="#org9202f5e">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -696,8 +696,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgf66f5be" class="outline-3">
-<h3 id="orgf66f5be"><span class="section-number-3">1.8.</span> <a href="#orgf66f5be">关于软件</a></h3>
+<div id="outline-container-org5dc48e4" class="outline-3">
+<h3 id="org5dc48e4"><span class="section-number-3">1.8.</span> <a href="#org5dc48e4">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -708,8 +708,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgdd31f1e" class="outline-4">
-<h4 id="orgdd31f1e"><span class="section-number-4">1.8.1.</span> <a href="#orgdd31f1e">SQLite</a></h4>
+<div id="outline-container-orgd13d147" class="outline-4">
+<h4 id="orgd13d147"><span class="section-number-4">1.8.1.</span> <a href="#orgd13d147">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9b372ca" class="outline-3">
-<h3 id="org9b372ca"><span class="section-number-3">1.9.</span> <a href="#org9b372ca">关于workflow</a></h3>
+<div id="outline-container-orgd406ead" class="outline-3">
+<h3 id="orgd406ead"><span class="section-number-3">1.9.</span> <a href="#orgd406ead">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3be3644" class="outline-2">
-<h2 id="org3be3644"><span class="section-number-2">2.</span> <a href="#org3be3644">棒棒视频</a></h2>
+<div id="outline-container-orgbebaf5a" class="outline-2">
+<h2 id="orgbebaf5a"><span class="section-number-2">2.</span> <a href="#orgbebaf5a">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -805,8 +805,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orga48a1dc" class="outline-3">
-<h3 id="orga48a1dc"><span class="section-number-3">2.1.</span> <a href="#orga48a1dc">Veritasium 真理元素</a></h3>
+<div id="outline-container-org315613a" class="outline-3">
+<h3 id="org315613a"><span class="section-number-3">2.1.</span> <a href="#org315613a">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -831,8 +831,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgba7f652" class="outline-3">
-<h3 id="orgba7f652"><span class="section-number-3">2.2.</span> <a href="#orgba7f652">各种剧</a></h3>
+<div id="outline-container-org0f87390" class="outline-3">
+<h3 id="org0f87390"><span class="section-number-3">2.2.</span> <a href="#org0f87390">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -853,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgadb1556" class="outline-3">
-<h3 id="orgadb1556"><span class="section-number-3">2.3.</span> <a href="#orgadb1556">电影</a></h3>
+<div id="outline-container-orgd5385da" class="outline-3">
+<h3 id="orgd5385da"><span class="section-number-3">2.3.</span> <a href="#orgd5385da">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -879,8 +879,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgb4ca555" class="outline-2">
-<h2 id="orgb4ca555"><span class="section-number-2">3.</span> <a href="#orgb4ca555">快乐游戏</a></h2>
+<div id="outline-container-org0734a61" class="outline-2">
+<h2 id="org0734a61"><span class="section-number-2">3.</span> <a href="#org0734a61">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -909,8 +909,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfa92a2b" class="outline-2">
-<h2 id="orgfa92a2b"><span class="section-number-2">4.</span> <a href="#orgfa92a2b">宝藏博主</a></h2>
+<div id="outline-container-org243f2ab" class="outline-2">
+<h2 id="org243f2ab"><span class="section-number-2">4.</span> <a href="#org243f2ab">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -922,15 +922,15 @@ and exist, before it is generally received and practiced on.
 </p></li>
 </ul>
 
-<figure id="org4c9484a">
+<figure id="orgec7cec8">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png">
 
 </figure>
 </div>
 </div>
 
-<div id="outline-container-orgfd0a1e3" class="outline-2">
-<h2 id="orgfd0a1e3"><span class="section-number-2">5.</span> <a href="#orgfd0a1e3">有意思的</a></h2>
+<div id="outline-container-org4d16995" class="outline-2">
+<h2 id="org4d16995"><span class="section-number-2">5.</span> <a href="#org4d16995">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -947,12 +947,18 @@ and exist, before it is generally received and practiced on.
 <li><a href="https://pointerpointer.com/">Pointer Pointer</a> 鼠标指到哪, 就会生成一个图片也指向那里</li>
 <li><a href="https://redd.it/uf5htq">One of my better comebacks.</a>
 Always check your friendship before terminating it.  hhhh</li>
+<li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
+可视化Git历史, 很有意思
+<ul class="org-ul">
+<li>还有人拿它来可视化论坛的帖子:
+<a href="https://edgeryders.eu/t/visualizing-our-7-years-of-online-dialogue-with-gource/11905">Visualizing our 7 years of online dialogue with Gource</a></li>
+</ul></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org866b439" class="outline-2">
-<h2 id="org866b439"><span class="section-number-2">6.</span> <a href="#org866b439">我想玩的</a></h2>
+<div id="outline-container-org7f56d1e" class="outline-2">
+<h2 id="org7f56d1e"><span class="section-number-2">6.</span> <a href="#org7f56d1e">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -974,8 +980,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-28 10:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-28 15:32</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-28 16:22</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-28 16:24</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
