Update from https://github.com/thebesttv/eserver-static/commit/bdf7f9ace219e191c0c36c1f17a3cdb0b2e5eb3f

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-28 18:10 -->
+<!-- 2022-09-28 18:17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,42 +33,42 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org94ca078">1. 妙妙文章</a>
+<li><a href="#orgfbf2e02">1. 妙妙文章</a>
 <ul>
-<li><a href="#org46551d7">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org6a4c90d">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org2380944">1.3. 关于编辑器</a></li>
-<li><a href="#orgdbca111">1.4. 关于代码</a></li>
-<li><a href="#org9f32fd8">1.5. 关于CPU</a>
+<li><a href="#org60ef4ca">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org12693d2">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org50ff577">1.3. 关于编辑器</a></li>
+<li><a href="#orgff8b9d7">1.4. 关于代码</a></li>
+<li><a href="#orga85c0e4">1.5. 关于CPU</a>
 <ul>
-<li><a href="#orgab5d8b4">1.5.1. Lisp</a></li>
+<li><a href="#org6cbe440">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgaa2e86e">1.6. 关于算法</a>
+<li><a href="#org39d6e8d">1.6. 关于算法</a>
 <ul>
-<li><a href="#org28badaa">1.6.1. 关于随机</a></li>
+<li><a href="#org72b6855">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgb4bbc7e">1.7. 关于AI</a></li>
-<li><a href="#org5ada881">1.8. 关于软件</a>
+<li><a href="#org35b6002">1.7. 关于AI</a></li>
+<li><a href="#org20011a5">1.8. 关于软件</a>
 <ul>
-<li><a href="#org90a64a3">1.8.1. SQLite</a></li>
+<li><a href="#org6fcd606">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgefd2e0d">1.9. 关于workflow</a></li>
+<li><a href="#orgc9c14f5">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgbfce3ce">2. 棒棒视频</a>
+<li><a href="#orgace2fce">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgbd83bb4">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orga7ae8b2">2.2. 各种剧</a></li>
-<li><a href="#orgce521bd">2.3. 电影</a></li>
+<li><a href="#org7729876">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgfeb53bb">2.2. 各种剧</a></li>
+<li><a href="#orga429981">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org19979b0">3. 快乐游戏</a></li>
-<li><a href="#org148dc38">4. 宝藏博主</a></li>
-<li><a href="#org3afe5dd">5. 有意思的</a></li>
-<li><a href="#orgef32e5f">6. 我想玩的</a></li>
+<li><a href="#orgcd87149">3. 快乐游戏</a></li>
+<li><a href="#org1e61369">4. 宝藏博主</a></li>
+<li><a href="#orgf3c4b2a">5. 有意思的</a></li>
+<li><a href="#org08ddb92">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -77,8 +77,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org94ca078" class="outline-2">
-<h2 id="org94ca078"><span class="section-number-2">1.</span> <a href="#org94ca078">妙妙文章</a></h2>
+<div id="outline-container-orgfbf2e02" class="outline-2">
+<h2 id="orgfbf2e02"><span class="section-number-2">1.</span> <a href="#orgfbf2e02">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -437,7 +437,7 @@ cards until the game is over.
 </p></li>
 </ul>
 
-<figure id="org13f136e">
+<figure id="org08deabd">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg">
 
 </figure>
@@ -501,8 +501,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org46551d7" class="outline-3">
-<h3 id="org46551d7"><span class="section-number-3">1.1.</span> <a href="#org46551d7">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org60ef4ca" class="outline-3">
+<h3 id="org60ef4ca"><span class="section-number-3">1.1.</span> <a href="#org60ef4ca">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -532,8 +532,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org6a4c90d" class="outline-3">
-<h3 id="org6a4c90d"><span class="section-number-3">1.2.</span> <a href="#org6a4c90d">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org12693d2" class="outline-3">
+<h3 id="org12693d2"><span class="section-number-3">1.2.</span> <a href="#org12693d2">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -567,8 +567,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org2380944" class="outline-3">
-<h3 id="org2380944"><span class="section-number-3">1.3.</span> <a href="#org2380944">关于编辑器</a></h3>
+<div id="outline-container-org50ff577" class="outline-3">
+<h3 id="org50ff577"><span class="section-number-3">1.3.</span> <a href="#org50ff577">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -584,8 +584,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgdbca111" class="outline-3">
-<h3 id="orgdbca111"><span class="section-number-3">1.4.</span> <a href="#orgdbca111">关于代码</a></h3>
+<div id="outline-container-orgff8b9d7" class="outline-3">
+<h3 id="orgff8b9d7"><span class="section-number-3">1.4.</span> <a href="#orgff8b9d7">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -611,8 +611,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org9f32fd8" class="outline-3">
-<h3 id="org9f32fd8"><span class="section-number-3">1.5.</span> <a href="#org9f32fd8">关于CPU</a></h3>
+<div id="outline-container-orga85c0e4" class="outline-3">
+<h3 id="orga85c0e4"><span class="section-number-3">1.5.</span> <a href="#orga85c0e4">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -626,8 +626,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-orgab5d8b4" class="outline-4">
-<h4 id="orgab5d8b4"><span class="section-number-4">1.5.1.</span> <a href="#orgab5d8b4">Lisp</a></h4>
+<div id="outline-container-org6cbe440" class="outline-4">
+<h4 id="org6cbe440"><span class="section-number-4">1.5.1.</span> <a href="#org6cbe440">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -650,8 +650,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgaa2e86e" class="outline-3">
-<h3 id="orgaa2e86e"><span class="section-number-3">1.6.</span> <a href="#orgaa2e86e">关于算法</a></h3>
+<div id="outline-container-org39d6e8d" class="outline-3">
+<h3 id="org39d6e8d"><span class="section-number-3">1.6.</span> <a href="#org39d6e8d">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -670,8 +670,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org28badaa" class="outline-4">
-<h4 id="org28badaa"><span class="section-number-4">1.6.1.</span> <a href="#org28badaa">关于随机</a></h4>
+<div id="outline-container-org72b6855" class="outline-4">
+<h4 id="org72b6855"><span class="section-number-4">1.6.1.</span> <a href="#org72b6855">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -685,8 +685,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb4bbc7e" class="outline-3">
-<h3 id="orgb4bbc7e"><span class="section-number-3">1.7.</span> <a href="#orgb4bbc7e">关于AI</a></h3>
+<div id="outline-container-org35b6002" class="outline-3">
+<h3 id="org35b6002"><span class="section-number-3">1.7.</span> <a href="#org35b6002">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -696,8 +696,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5ada881" class="outline-3">
-<h3 id="org5ada881"><span class="section-number-3">1.8.</span> <a href="#org5ada881">关于软件</a></h3>
+<div id="outline-container-org20011a5" class="outline-3">
+<h3 id="org20011a5"><span class="section-number-3">1.8.</span> <a href="#org20011a5">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -708,8 +708,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org90a64a3" class="outline-4">
-<h4 id="org90a64a3"><span class="section-number-4">1.8.1.</span> <a href="#org90a64a3">SQLite</a></h4>
+<div id="outline-container-org6fcd606" class="outline-4">
+<h4 id="org6fcd606"><span class="section-number-4">1.8.1.</span> <a href="#org6fcd606">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgefd2e0d" class="outline-3">
-<h3 id="orgefd2e0d"><span class="section-number-3">1.9.</span> <a href="#orgefd2e0d">关于workflow</a></h3>
+<div id="outline-container-orgc9c14f5" class="outline-3">
+<h3 id="orgc9c14f5"><span class="section-number-3">1.9.</span> <a href="#orgc9c14f5">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgbfce3ce" class="outline-2">
-<h2 id="orgbfce3ce"><span class="section-number-2">2.</span> <a href="#orgbfce3ce">棒棒视频</a></h2>
+<div id="outline-container-orgace2fce" class="outline-2">
+<h2 id="orgace2fce"><span class="section-number-2">2.</span> <a href="#orgace2fce">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -805,8 +805,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgbd83bb4" class="outline-3">
-<h3 id="orgbd83bb4"><span class="section-number-3">2.1.</span> <a href="#orgbd83bb4">Veritasium 真理元素</a></h3>
+<div id="outline-container-org7729876" class="outline-3">
+<h3 id="org7729876"><span class="section-number-3">2.1.</span> <a href="#org7729876">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -831,8 +831,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga7ae8b2" class="outline-3">
-<h3 id="orga7ae8b2"><span class="section-number-3">2.2.</span> <a href="#orga7ae8b2">各种剧</a></h3>
+<div id="outline-container-orgfeb53bb" class="outline-3">
+<h3 id="orgfeb53bb"><span class="section-number-3">2.2.</span> <a href="#orgfeb53bb">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -853,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgce521bd" class="outline-3">
-<h3 id="orgce521bd"><span class="section-number-3">2.3.</span> <a href="#orgce521bd">电影</a></h3>
+<div id="outline-container-orga429981" class="outline-3">
+<h3 id="orga429981"><span class="section-number-3">2.3.</span> <a href="#orga429981">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -879,8 +879,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org19979b0" class="outline-2">
-<h2 id="org19979b0"><span class="section-number-2">3.</span> <a href="#org19979b0">快乐游戏</a></h2>
+<div id="outline-container-orgcd87149" class="outline-2">
+<h2 id="orgcd87149"><span class="section-number-2">3.</span> <a href="#orgcd87149">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -909,8 +909,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org148dc38" class="outline-2">
-<h2 id="org148dc38"><span class="section-number-2">4.</span> <a href="#org148dc38">宝藏博主</a></h2>
+<div id="outline-container-org1e61369" class="outline-2">
+<h2 id="org1e61369"><span class="section-number-2">4.</span> <a href="#org1e61369">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -922,15 +922,15 @@ and exist, before it is generally received and practiced on.
 </p></li>
 </ul>
 
-<figure id="org7fed3c8">
+<figure id="org83c874a">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png">
 
 </figure>
 </div>
 </div>
 
-<div id="outline-container-org3afe5dd" class="outline-2">
-<h2 id="org3afe5dd"><span class="section-number-2">5.</span> <a href="#org3afe5dd">有意思的</a></h2>
+<div id="outline-container-orgf3c4b2a" class="outline-2">
+<h2 id="orgf3c4b2a"><span class="section-number-2">5.</span> <a href="#orgf3c4b2a">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -957,8 +957,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgef32e5f" class="outline-2">
-<h2 id="orgef32e5f"><span class="section-number-2">6.</span> <a href="#orgef32e5f">我想玩的</a></h2>
+<div id="outline-container-org08ddb92" class="outline-2">
+<h2 id="org08ddb92"><span class="section-number-2">6.</span> <a href="#org08ddb92">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -981,7 +981,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-28 16:22</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-28 18:10</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-28 18:17</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
